margin-left-8 to ml-8

--- a/templates/accounts/verify.html
+++ b/templates/accounts/verify.html
@@ -28,7 +28,7 @@
             <div class="w-100 flex-this justify-center">
     
                 <div class="w-50">{{ form.email }}</div>
-                <div class="margin-left-8">
+                <div class="ml-8">
                     <button class="primary-btn action-btn">Resend email</button>    
                 </div>
             </div>
