--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -146,7 +146,7 @@
                                 {% endif %}
                             {% endif %}
 
-                            <div class="mt-1p margin-left-8">
+                            <div class="mt-1p ml-8">
                                 <a class="primary-btn action-btn block" href="{% url 'view-label' community.id bclabel.unique_id %}">View Label</a>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                                 {% endif %}
                             {% endif %}
 
-                            <div class="mt-1p margin-left-8">
+                            <div class="mt-1p ml-8">
                                 <a class="primary-btn action-btn block" href="{% url 'view-label' community.id tklabel.unique_id %}">View Label</a>
                             </div>
                         </div>
