--- a/templates/partials/_add-contributors.html
+++ b/templates/partials/_add-contributors.html
@@ -40,7 +40,7 @@
                     {% endfor %}
                 {% endif %}
             </datalist>
-            <div id="add-contributor-btn" class="add-square-btn pointer margin-left-8">
+            <div id="add-contributor-btn" class="add-square-btn pointer ml-8">
                 <span>+</span>
             </div>              
         </div>
