--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -59,7 +59,7 @@
                 >
               </div>
 
-              <div class="margin-left-8 flex-this gap-half">
+              <div class="ml-8 flex-this gap-half">
                 <!-- Notification -->
                 {% include 'snippets/notifications.html' with scope=researcher.id %}
                 <!-- Settings -->
