--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -188,7 +188,7 @@
                             <li id="{{ url }}" class="mb-8 show">
                                 <div class="grey-chip flex-this row space-between">
                                     <div><p class="center-name word-break">{{ url }}</p></div>
-                                    <div id="btn-{{ url }}" class="removeProjectUrlBtn pointer margin-left-8">&times;</div>
+                                    <div id="btn-{{ url }}" class="removeProjectUrlBtn pointer ml-8">&times;</div>
                                 </div>
                                 <input type="hidden" value="{{ url }}" name="project_urls">                        
                             </li>
