--- a/templates/projects/project-status.html
+++ b/templates/projects/project-status.html
@@ -85,7 +85,7 @@
                                     {% endif %}
                                 </select>
                             </div>
-                            <div class="margin-left-8"><button class="primary-btn action-btn" name="notify-btn">Notify</button></div>
+                            <div class="ml-8"><button class="primary-btn action-btn" name="notify-btn">Notify</button></div>
                         </div>
 
                     </form>
