--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -137,7 +137,7 @@
                             Sort: Archived
                         </option>
                     </select>  
-                    <input class="primary-btn action-btn margin-left-8" type="submit" value="Sort"> 
+                    <input class="primary-btn action-btn ml-8" type="submit" value="Sort"> 
                 </form>
 
 
