--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -82,7 +82,7 @@
                         </a>                        
                     </div>
 
-                    <div class="margin-left-8">
+                    <div class="ml-8">
                         <a href="{% url 'delete-user-notification' n.id %}">
                             <i class="fa-regular fa-xmark fa-lg darkteal-text"></i>
                         </a>
