--- a/templates/snippets/project_notices.html
+++ b/templates/snippets/project_notices.html
@@ -36,7 +36,7 @@
                         {% endfor %}
                     {% endif %}
                 > 
-            <span class="margin-left-8">Select</span></div>
+            <span class="ml-8">Select</span></div>
         </div>
 
         <div class="flex-this column center-text margin-left-16">
@@ -58,7 +58,7 @@
                     {% endif %}
                 >
 
-            <span class="margin-left-8">Select</span></div>
+            <span class="ml-8">Select</span></div>
         </div>
 
         <div class="flex-this column center-text margin-left-16 align-center">
@@ -79,7 +79,7 @@
                         {% endfor %}
                     {% endif %}
                 >
-                <span class="margin-left-8">Select</span>
+                <span class="ml-8">Select</span>
             </div>
         </div>
 
