--- a/templates/communities/connections.html
+++ b/templates/communities/connections.html
@@ -45,8 +45,8 @@
                 <div class="border-bottom-dash-teal">
                     <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof institution.institution_creator.get_full_name  institution.institution_creator.username %}
-                        <span class="bold margin-left-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
-                        <span class="bold margin-left-8">Website</span> | {{ institution.website }} <br><br>
+                        <span class="bold ml-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
+                        <span class="bold ml-8">Website</span> | {{ institution.website }} <br><br>
                     </p>                        
                 </div>
 
@@ -161,7 +161,7 @@
                 <div class="border-bottom-dash-teal">
                     <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof comm.community_creator.get_full_name comm.community_creator.get_full_name %}
-                        <span class="bold margin-left-8">Account Contact Email</span> | {{ comm.community_creator.email }} <br><br>
+                        <span class="bold ml-8">Account Contact Email</span> | {{ comm.community_creator.email }} <br><br>
                     </p>      
                 </div>   
                 
