--- a/templates/partials/_embed.html
+++ b/templates/partials/_embed.html
@@ -10,14 +10,14 @@
     <body>
         {% if restricted %}
             <div class="flex-this w-100">
-                <div class="margin-left-8 margin-right-8 m-auto" style="display: inherit;">
+                <div class="ml-8 margin-right-8 m-auto" style="display: inherit;">
                     <a 
                         href="https://localcontexts.org" 
                         style="display: inline-flex;">
                         <img style="width:60px;" loading="lazy" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="404 Local Contexts round logo">
                     </a>
                 </div>
-                <div class="font-size-14 align-center flex-this margin-right-8 margin-left-8 column">
+                <div class="font-size-14 align-center flex-this margin-right-8 ml-8 column">
                     <h1 class="orange-text mb-0">Oops!</h1>
                     <p>We can't seem to find the page you are looking for.<br><strong>Error Code: 404 Not Found</strong></p>
                 </div>
@@ -29,7 +29,7 @@
                     <!-- Notices -->
                     {% if notices %}
                         {% for notice in notices %}
-                            <div id="notice" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                            <div id="notice" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                 <div id="notice-icon" style="padding-right: 12px;">
                                     <img 
                                         loading="lazy" 
@@ -116,7 +116,7 @@
                         {% endfor %}
 
                     {% elif otc_notices %}
-                        <div id="notice" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                        <div id="notice" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                             <div id="notice-icon" style="padding-left: 12px;padding-right: 12px;">
                                 <img 
                                     loading="lazy" 
@@ -164,7 +164,7 @@
                             {% for tklabel in labels.tk_labels %}
                                 {% if not lang or lang == 'en' %}
                                     {% if tklabel.language_tag == 'en' %}
-                                        <div id="label" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                                        <div id="label" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                             <div id="label-icon" style="padding-right: 12px;">
                                                 <img 
                                                     loading="lazy" 
@@ -195,7 +195,7 @@
                                     {% endif %}
 
                                 {% elif lang == tklabel.language_tag %}
-                                    <div id="label" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                                    <div id="label" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                         <div id="label-icon" style="padding-right: 12px;">
                                             <img 
                                                 loading="lazy" 
@@ -227,7 +227,7 @@
                                 {% else %}
                                     {% for translation in tklabel.tklabel_translation.all %}
                                         {% if lang == translation.language_tag %}
-                                            <div id="label" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                                            <div id="label" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                                 <div id="label-icon" style="padding-right: 12px;">
                                                     <img 
                                                         loading="lazy" 
@@ -264,7 +264,7 @@
                             {% for bclabel in labels.bc_labels %}
                                 {% if not lang or lang == 'en' %}
                                     {% if bclabel.language_tag == 'en' %}
-                                        <div id="label" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                                        <div id="label" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                             <div id="label-icon" style="padding-right: 12px;">
                                                 <img 
                                                     loading="lazy" 
@@ -295,7 +295,7 @@
                                     {% endif %}
 
                                 {% elif lang == bclabel.language_tag %}
-                                    <div id="label" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                                    <div id="label" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                         <div id="label-icon" style="padding-right: 12px;">
                                             <img 
                                                 loading="lazy" 
@@ -327,7 +327,7 @@
                                 {% else %}
                                     {% for translation in bclabel.bclabel_translation.all %}
                                         {% if lang == translation.language_tag %}
-                                            <div id="label" class="mt-8 mb-8 margin-left-8 margin-right-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
+                                            <div id="label" class="m-8{% if layout == '2' %} flex-this align-center{% endif %}{% if layout == '3' %} flex-this w-100 border-bottom-not-last{% endif %}">
                                                 <div id="label-icon" style="padding-right: 12px;">
                                                     <img 
                                                         loading="lazy" 
@@ -368,7 +368,7 @@
 
             <!-- Logo and Page Link -->
             <div class="flex-this w-100 {% if align == 'right' %}flex-end{% else %}flex-start{% endif%}" style="padding: 12px; padding-top: 0px;">
-                <div class="margin-left-8 margin-right-8 m-auto" style="display: inherit;">
+                <div class="ml-8 margin-right-8 m-auto" style="display: inherit;">
                     <a 
                         href="https://localcontexts.org" 
                         style="display: inline-flex;">
