--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -18,7 +18,7 @@
                 </a>                
             </div>
             {% if member_role == 'admin' %}
-                <div class="margin-left-8">
+                <div class="ml-8">
                     <a class="primary-btn green-btn" onclick="openMemberModal()">Add a new member <i class="fa fa-user-plus" aria-hidden="true"></i></a>
                 </div>
             {% endif %}
