--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -19,7 +19,7 @@
 
                 <!-- Settings -->
                 {% if request.user == community.community_creator or member_role == 'admin' %}
-                    <div class="margin-left-8">
+                    <div class="ml-8">
                         <a href="{% url 'update-community' community.id %}" class="darkteal-text primary-btn white-btn"> Settings <i class="fa fa-cog" aria-hidden="true"></i></a>
                     </div>
                 {% endif %}
