--- a/templates/partials/infocards/_institution-card.html
+++ b/templates/partials/infocards/_institution-card.html
@@ -65,7 +65,7 @@
                     {% endif %}
                 </div>
                 {% if '/dashboard/' in request.path %}
-                    <div class="margin-left-8 flex-this gap-half">
+                    <div class="ml-8 flex-this gap-half">
                         <!-- Notification -->
                         {% include 'snippets/notifications.html' with scope=institution %}
                         <!-- Settings -->
