--- a/templates/researchers/connections.html
+++ b/templates/researchers/connections.html
@@ -52,8 +52,8 @@
                 <div class="border-bottom-dash-teal">
                     <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof institution.institution_creator.get_full_name  institution.institution_creator.username %}
-                        <span class="bold margin-left-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
-                        <span class="bold margin-left-8">Website</span> | {{ institution.website }} <br><br>
+                        <span class="bold ml-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
+                        <span class="bold ml-8">Website</span> | {{ institution.website }} <br><br>
                     </p>                        
                 </div>
 
@@ -169,7 +169,7 @@
                 <div class="border-bottom-dash-teal">
                     <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof community.community_creator.get_full_name community.community_creator.get_full_name %}
-                        <span class="bold margin-left-8">Account Contact Email</span> | {{ community.community_creator.email }} <br><br>
+                        <span class="bold ml-8">Account Contact Email</span> | {{ community.community_creator.email }} <br><br>
                     </p>      
                 </div>   
                 
